# RustAPI

./: Cargo.toml
Newsletter/: .gitignore  Cargo.toml
Newsletter/src/: lib.rs  main.rs
Newsletter/src/tests/: health_check.rs  healthcheck_tests.rs  healthcheck_tests.rs.rs
Newsletter/tests/: .rustc_info.json  healthcheck_tests.rs
api/: .env  .gitignore  Cargo.toml  rust.cursor-tutor.code-workspace
api/src/: config.rs  db.rs  main.rs
rust_api/: .gitignore  Cargo.toml
rust_api/src/: main  main.rs  server.rs
src/: main.rs  models.rs
